--- a/HF2/views/header.ejs
+++ b/HF2/views/header.ejs
@@ -39,7 +39,7 @@
                     <% } else{ %>  
                         <li class="nav-item">
                     <% } %>
-                        <a class="nav-link" href="/cars">Autók</a>
+                        <a class="nav-link" href="/car">Autók</a>
                     </li>
 
                     <% if(pagetype=="parts"){ %>
@@ -47,7 +47,7 @@
                     <% } else{ %>  
                         <li class="nav-item">
                     <% } %>
-                        <a class="nav-link" href="/cars">Alkatrészek</a>
+                        <a class="nav-link" href="/part">Alkatrészek</a>
                     </li>
 
                 </ul>
@@ -63,7 +63,7 @@
                             <% if(loggedin){ %>
                                 <a class="nav-link" href="/admin"><i class="fas fa-user"></i> Admin</a>
                             <%} else{ %>
-                                <a class="nav-link" href="/auth"><i class="fas fa-user"></i> Belépés</a>
+                                <a class="nav-link" href="/login"><i class="fas fa-user"></i> Belépés</a>
                             <% } %>
                         </li>
 
