--- a/HF2/views/index.ejs
+++ b/HF2/views/index.ejs
@@ -15,7 +15,7 @@
                 <img src="/ford.png" alt="#" href="#" class="card-img-top">
             </div>
             <div class="card-footer">
-                <button type="button" class="btn btn-dark btn-lg btn-block" href="car/ford">Ford</button>
+                <a class="btn btn-dark btn-lg btn-block" href="car/ford" role="button">Ford</a>
             </div>
         </div>
         <div class="card" style="background-color:lightgray">
@@ -23,7 +23,7 @@
                 <img src="/suzuki.png" alt="#" class="card-img-top">
             </div>
             <div class="card-footer">
-                <button type="button" class="btn btn-dark btn-lg btn-block" href="car/suzuki">Suzuki</button>
+                <a class="btn btn-dark btn-lg btn-block" href="car/suzuki" role="button">Suzuki</a>
             </div>
         </div>
         <div class="card" style="background-color:lightgray">
@@ -31,7 +31,7 @@
                 <img src="/toyota.png" alt="#" class="card-img-top">
             </div>
             <div class="card-footer">
-                <button type="button" class="btn btn-dark btn-lg btn-block" href="car/toyota">Toyota</button>
+                <a class="btn btn-dark btn-lg btn-block" href="car/toyota" role="button">Toyota</a>
             </div>
         </div>
     </div>
