--- a/HF2/views/login.ejs
+++ b/HF2/views/login.ejs
@@ -10,12 +10,12 @@
                     <form action="/login" method="post">
                         <div class="form-group my-3 mx-4">
                             <label for="exampleInputEmail1">Email cím</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" name="email"
+                            <input type="email" class="form-control" id="email" name="email"
                                 aria-describedby="emailHelp" placeholder="Email cím">
                         </div>
                         <div class="form-group my-3 mx-4">
                             <label for="exampleInputPassword1">Jelszó</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" name="password" placeholder="Jelszó">
+                            <input type="password" class="form-control" id="password" name="password" placeholder="Jelszó">
                         </div>
                         <div class="text-center">
                             <button class="btn btn-dark my-3 mx-4" role="button">Login</button>
