--- a/code/views/orderlist.ejs
+++ b/code/views/orderlist.ejs
@@ -31,7 +31,7 @@
                                     <a class="btn btn-primary btn-sm" href="mailto:<%= oneOrder.email %>" role="button">
                                         <i class="far fa-envelope"></i>
                                     </a>
-                                    <a class="btn btn-danger btn-sm" href="/order/<%= oneOrder._id %>/del"
+                                    <a class="btn btn-danger btn-sm" href="/order/del/<%= oneOrder._id %>"
                                         role="button">
                                         <i class="fas fa-times"></i>
                                     </a>
