--- a/code/views/partlist.ejs
+++ b/code/views/partlist.ejs
@@ -7,6 +7,14 @@
             <div class="card text-center">
                 <h4 class="card-header">Alkatrészek</h4>
                 <div class="container">
+                    <% if(typeof error !== 'undefined'){ %>
+                        <div class="alert alert-warning alert-dismissible fade show my-3" role="alert">
+                            <strong>Hoppá!</strong> Úgy néz ki nem állítottad be, hogy mennyit szeretnél rendelni.
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    <% } %>
                     <table class="table mt-3 table-hover table-bordered">
                         <thead>
                             <tr>
@@ -22,7 +30,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <% part.forEach(function(onePart){ %>
+                            <% parts.forEach(function(onePart){ %>
                             <tr>
                                 <td>
                                     <%= onePart.partBrand %>
@@ -36,23 +44,29 @@
                                 <td>
                                     <%= onePart.price %>
                                 </td>
-                                <td>
-                                    <input type="number" value="1" min="1" max="100" step="1" />
-                                </td>
-                                <td><button type="submit" class="btn btn-outline-success btn-sm">
-                                        <i class="fas fa-plus"></i></button>
-                                </td>
+                                <form action="/cart/new/<%= onePart._id %>" method="post">
+                                    <td>
+                                        <input type="number" value="0" min="0" max="100" step="1" id="quantity"
+                                            name="quantity">
+                                    </td>
+                                    <td>
+                                        <button type="submit" class="btn btn-outline-success btn-sm">
+                                            <i class="fas fa-plus"></i></button>
+                                    </td>
+                                </form>
                                 <% if(loggedin) { %>
                                 <td>
-                                    <a class="btn btn-dark btn-sm" href="/part/<%= onePart._carid %>/edit/<%= onePart._id %>" role="button">
+                                    <a class="btn btn-dark btn-sm"
+                                        href="/part/<%= onePart._carid %>/edit/<%= onePart._id %>" role="button">
                                         <i class="fas fa-edit"></i>
                                     </a>
-
-                                    <a class="btn btn-danger btn-sm" href="/part/<%= onePart._carid %>/del/<%= onePart._id %>" role="button">
+                                    <a class="btn btn-danger btn-sm"
+                                        href="/part/<%= onePart._carid %>/del/<%= onePart._id %>" role="button">
                                         <i class="fas fa-times"></i>
                                     </a>
 
-                                    <a class="btn btn-success btn-sm" href="/part/ <%= onePart._carid %>/new" role="button">
+                                    <a class="btn btn-success btn-sm" href="/part/<%= onePart._carid %>/new"
+                                        role="button">
                                         <i class="fas fa-plus"></i>
                                     </a>
                                 </td>
